--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,10 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "nodemon": "^3.1.0",
-    "prisma": "^5.13.0"
+    "mongodb": "^6.8.0",
+    "nodemon": "^3.1.0"
+  },
+  "devDependencies": {
+    "prisma": "^5.18.0"
   }
 }
