--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,1 +1,4 @@
-{ "version": 2, "rewrites": [{ "source": "/app.js", "destination": "/backend" }] }
+{ "version": 2, 
+  "rewrites": [{ "source": "/(.*)", "destination": "/" }],
+  "builds": [{"src":"./app.js", "use":"@vercel/node"}]
+}
