--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,4 +1,4 @@
 { "version": 2, 
-  "rewrites": [{ "source": "/(.*)", "destination": "/backend" }],
-  "builds": [{"source":"./app.js", "use":"@vercel/node"}]
+  "rewrites": [{ "src": "/(.*)", "dest": "/backend" }],
+  "builds": [{"src":"./app.js", "use":"@vercel/node"}]
 }
