Vercel added to both

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,9 +1,14 @@
 {
+    "installCommand": "npm install --legacy-peer-deps",
     "version": 2,
     "builds": [
         {
-            "src": "/app.js",
+            "src": "app.js",
             "use": "@vercel/node"
+        },
+        {
+            "src": "src/**/*",
+            "use": "@vercel/static"
         }
     ],
     "routes": [
@@ -13,4 +18,3 @@
         }
     ]
 }
-
